fixed background & spacing

--- a/style.css
+++ b/style.css
@@ -7,24 +7,69 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
     color:white;
 }
 body{
-    background: linear-gradient(to bottom, #903D64, #1B1115);
+    background: fixed linear-gradient(to bottom, #903D64, #1B1115);
+    /* background: fixed; */
     height: 100vh;
     padding: 10px 50px;
 }
-.splash,
-.ask-screen{
-    height: 100vh;
-    display: flex;
+@media (min-width: 768px) {
+   .wrapper{
+        max-width: 80%;
+        margin: 0 auto;
+        padding: 0 50px;
+        border-left: 1px solid #707070;
+        border-right: 1px solid #707070;
+    } 
+}
+@media (min-width: 940px) {
+    .wrapper{
+        max-width: 50%;
+    }
 }
 h1,
 h2,
+input{
+    margin: 0 0 50px 0;
+}
+h1{
+    font-size: 40px;
+    line-height: 1.2;
+}
+h2{
+    width: 100%;
+    text-align: left;
+}
+.splash,
+.ask-screen{
+    height:100vh;
+}
+.splash,
+.ask-screen,
 form{
-    flex-direction: row;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
+input[type=text]{
+    background: none;
+    border: none;
+    border-bottom: 1px solid #707070;
+}
 button{
-    display:none;
+    display:none; 
+}
+.btn-style{
+    background: none;
+    padding: 5px 10px;
+    border: none;
+    position: relative;
+}
+.btn-style:before{
+    content: "";
+    width: 100%;
+    position: absolute;
+    border-bottom: 1px solid white;
 }
 .visible{
     display: block;
